# local

./: .gitignore  README.md  about.html  index.html  national.ipynb  pyproject.toml
.github/workflows/: build.yml
examples/data/: the-dataframes.ipynb
examples/plots/: nation-wide-votes.ipynb
examples/tables/: district-summary.ipynb
site/: .gitignore  _quarto.yml  custom.scss  index.qmd  styles.css
site_libs/bootstrap/: bootstrap-260f9c3aea725f4acf91065e955696a5.min.css
src/ug2021/: utils.py
src/ug2021/_resources/: polling-station-results.parquet
src/ug2021/data/: results.py
src/ug2021/plots/: national_plots.py
src/ug2021/tables/: district_tables.py
src/ug2021/values/: national_statistics.py
